<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".CompanyMainActivity">

    <TextView
            android:id="@+id/company_main_activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="44dp"
            android:text="@string/company_main_activity_title"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/company_main_activity_create_button"
            app:layout_constraintStart_toEndOf="@+id/company_main_activity_image"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
            android:id="@+id/company_main_activity_image"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="46dp"
            android:layout_marginBottom="51dp"
            app:layout_constraintBottom_toBottomOf="@+id/company_main_activity_message"
            app:layout_constraintEnd_toStartOf="@+id/company_main_activity_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/company_main"/>

    <Button
            android:id="@+id/company_main_activity_create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="61dp"
            android:layout_marginEnd="19dp"
            android:background="@color/light_green"
            android:text="@string/company_main_activity_create_button"
            android:onClick="onCreateClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/company_main_activity_title"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/company_main_activity_message"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/company_main_activity_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_main_activity_create_button"/>

    <SearchView
            android:id="@+id/company_main_activity_search"
            android:layout_width="0dp"
            android:layout_height="39dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="197dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <ListView
            android:id="@+id/company_main_activity_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="66dp"
            android:layout_marginBottom="66dp"
            app:layout_constraintBottom_toBottomOf="@+id/company_main_activity_clear_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_main_activity_message"/>

    <Button
            android:id="@+id/company_main_activity_reload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="42dp"
            android:background="@color/light_yellow"
            android:text="@string/company_main_activity_reload_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <Button
            android:id="@+id/company_main_activity_clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="42dp"
            android:background="@color/light_red"
            android:text="@string/company_main_activity_clear_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>