<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".DeleteCompanyActivity">

    <ImageView
            android:id="@+id/company_form_activity_image"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/company_form_activity_take_photo_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/company_main"/>

    <Button
            android:id="@+id/company_form_activity_choose_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="10dp"
            android:text="@string/company_form_activity_choose_photo_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_form_activity_image"/>

    <Button
            android:id="@+id/company_form_activity_take_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="256dp"
            android:layout_marginEnd="16dp"
            android:text="@string/company_form_activity_take_photo_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:id="@+id/company_form_activity_company_name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:ems="10"
            android:inputType="text"
            android:text="Name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_form_activity_take_photo_button"
            android:minHeight="48dp"/>

    <EditText
            android:id="@+id/company_form_activity_address_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:inputType="text"
            android:text="Address"
            app:layout_constraintStart_toStartOf="@+id/company_form_activity_company_name_field"
            app:layout_constraintTop_toBottomOf="@+id/company_form_activity_company_name_field"
            android:minHeight="48dp"/>

    <EditText
            android:id="@+id/company_form_activity_cars_sold_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:inputType="numberSigned"
            android:text="Cars Sold"
            app:layout_constraintStart_toStartOf="@+id/company_form_activity_address_field"
            app:layout_constraintTop_toBottomOf="@+id/company_form_activity_address_field" android:minHeight="48dp"/>

    <Button
            android:id="@+id/company_form_activity_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:background="@color/light_red"
            android:text="@string/company_form_activity_delete_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_form_activity_cars_sold_field"/>

</androidx.constraintlayout.widget.ConstraintLayout>
